fixed spacing issues and run errors

--- a/my-react-app/src/pages/about/AboutUsPage.css
+++ b/my-react-app/src/pages/about/AboutUsPage.css
@@ -1,5 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
 .about-container {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: "Poppins", sans-serif;
     color: #333;
     display: flex;
     flex-direction: column;
@@ -39,11 +40,14 @@
     gap: 40px;
     flex-wrap: wrap;
     font-family: 'Poppins', sans-serif;
+    margin-top: 2%;
 }
 
 .contact {
     flex: 2; 
     min-width: 400px; 
+    margin-left: 10%;
+    margin-bottom: 10%;
 }
 .contact h2 {
     font-size: 25px;
