--- a/my-react-app/src/pages/information/articlesStyles.css
+++ b/my-react-app/src/pages/information/articlesStyles.css
@@ -4,13 +4,15 @@
     margin: 50px 0;
     padding: 0 20px;
     user-select: none; 
+    margin-bottom: 8%;
   }
   
   .article-title {
     font-family: 'Poppins', sans-serif;
     font-size: 2rem;
     font-weight: 700;
-    margin-bottom: 30px;
+    margin-bottom: 3%;
+    margin-top: 8%;
     user-select: none; 
   }
   
