--- a/my-react-app/src/pages/upload/UploadSectionStyles.css
+++ b/my-react-app/src/pages/upload/UploadSectionStyles.css
@@ -3,7 +3,8 @@
 
 .upload-container {
   padding: 40px 20px;
-  margin-top: 50px;
+  margin-top: 6%;
+  margin-bottom: 4%;
   display: flex;
   flex-direction: column;
   align-items: center;
